# CppTinyTools

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CppTinyTools.cpp
src/: CMakeLists.txt
src/cpptinytools/: Parser.cpp  Parser.hpp
tests/: ParserTests.cpp
