# CMakeList.txt : CMake project for TinyCppTools, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("CppTinyTools")

# Add source to this projectDa's executable.
add_executable (CppTinyTools "CppTinyTools.cpp" "CppTinyTools.hpp")

# TODO: Add tests and install targets if needed.
